--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/nuxt": "^10.11.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
