--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^2.13.1",
+    "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.12.3",
     "vue": "latest"
   },
   "devDependencies": {
     "@vueuse/core": "^10.11.0",
-    "@vueuse/nuxt": "^10.11.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4"
+    "@vueuse/nuxt": "^10.11.0"
   }
 }
